[SCAL-87377][SCAL-88016] Visual fixes on docs (#216)
- have a max-width for documentation content
- footer overlaps the content body and the nav bar

--- a/docs/src/assets/styles/index.scss
+++ b/docs/src/assets/styles/index.scss
@@ -37,6 +37,7 @@ main {
 main.withHeaderFooter {
     padding-top: 51px;
     padding-bottom: 25px;
+    display: flex;
 }
 
 * {
@@ -81,8 +82,7 @@ a {
 /*end visited class*/
 
 .documentBody {
-    float: right;
-    padding-left: 7px;
+    padding-left: 6px;
 }
 
 .introWrapper {
@@ -210,5 +210,11 @@ button {
 
     .boxDiv {
         width: 100%;
+    }
+}
+
+@media screen and (max-width: $mobile-resolution-max) {
+    main.withHeaderFooter {
+        flex-direction: column;
     }
 }
