--- a/docs/src/components/Footer/index.scss
+++ b/docs/src/components/Footer/index.scss
@@ -1,9 +1,7 @@
 @import '../../assets/styles/variables.scss';
 
 footer {
-    position: absolute;
     width: 100%;
-    z-index: $footer-zIndex;
     background: var(--body-background-color);
 
     .footerWrapper {
